--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "polymer": "latest",
     "bourbon": "~3.1.8",
-    "raphael": "~2.1.2"
+    "raphael": "~2.1.2",
+    "jquery": "~2.0.3"
   },
   "devDependencies": {}
 }
